--- a/src/components/style/footer.css
+++ b/src/components/style/footer.css
@@ -1,13 +1,7 @@
-:root {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-  }
+
 
   body {
-    height: 100vh;
-    overflow: hidden;
+    background-color: black;
   }
   
   .footer {
