--- a/src/components/style/header.css
+++ b/src/components/style/header.css
@@ -3,7 +3,6 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    text-transform: lowercase;
     text-decoration: none;
 }
 
@@ -20,10 +19,11 @@
     z-index: 1000;
 }
 
-.header .logo {
+.header .logo  {
     font-weight: bolder;
     font-size: 25px;
-    color: #fbff08;
+    color: white;
+    text-transform: uppercase;
 }
 
 .header .navbar ul {
