--- a/src/components/style/footer.css
+++ b/src/components/style/footer.css
@@ -1,28 +1,23 @@
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: auto;
+  right: auto;
+  padding: 1rem;
+  background: purple;
+  color: #ffffff;
+  font-weight: 200;
+  display: flex;
+  justify-content: center;
+  gap: 0.2rem;
+  width: 100%;
+}
 
+.footer a {
+  color: #fbff08;
+  text-decoration: none;
+}
 
-
-  
-  .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 1rem;
-    background: purple;
-    color: white;
-    font-weight: 200;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.2rem;
-  }
-
-  .footer a{
-    color: #fbff08;
-    text-decoration:none;
-  }
-
-  .footer :hover a{
-    color: #b3b46a;
-
-  }
+.footer :hover a {
+  color: #b3b46a;
+}
