--- a/src/components/style/background.css
+++ b/src/components/style/background.css
@@ -1,4 +1,34 @@
 .image-waifu {
     width: 75px;
+}
 
+.buttonRefect {
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 50px;
+    background-color: purple;
+    padding: 10px;
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    transition: all 300ms ease 0ms;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    z-index: 99;    cursor: pointer;
+
+}
+
+.buttonRefect:hover {
+    background-color: #b3b46a;
+    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.3);
+    transform: translateY(-10px);
+}
+
+@media only screen and (max-width: 600px) {
+    .buttonRefect {
+        font-size: 14px;
+        padding: 16px 20px;
+        bottom: 20px;
+        right: 20px;
+    }
 }
