--- a/src/components/style/background.css
+++ b/src/components/style/background.css
@@ -1,6 +1,7 @@
-.image-waifu {
-    width: 75px;
-}
+/* .image-waifu {
+    width: 50%;
+    height: 50%;
+} */
 
 .buttonRefect {
     font-size: 16px;
@@ -14,7 +15,8 @@
     right: 40px;
     transition: all 300ms ease 0ms;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    z-index: 99;    cursor: pointer;
+    z-index: 99;
+    cursor: pointer;
 
 }
 
@@ -31,4 +33,40 @@
         bottom: 20px;
         right: 20px;
     }
+}
+
+
+ /* gridWrapper */
+
+img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.gridWrapper > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gridWrapper > div > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.gridWrapper {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: 200px;
+    grid-auto-flow: dense;
+}
+
+.gridWrapper .big {
+    grid-column: span 1;
+    grid-row: span 3;
 }
