--- a/src/components/style/footer.css
+++ b/src/components/style/footer.css
@@ -6,11 +6,10 @@
   padding: 1rem;
   background: purple;
   color: #ffffff;
-  font-weight: 200;
   display: flex;
   justify-content: center;
-  gap: 0.2rem;
   width: 100%;
+  height: 50px;
 }
 
 .footer a {
