--- a/src/components/style/NavBar.css
+++ b/src/components/style/NavBar.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
 
 .navbar-logo {
@@ -27,7 +27,7 @@
     grid-gap: 10px;
     list-style: none;
     text-align: center;
-    width: 50%;
+    width: 70vw;
     justify-content: end;
     margin-right: 2rem;
 }
@@ -70,7 +70,7 @@
     .nav-menu {
         display: flex;
         flex-direction: column;
-        width: 50%;
+        width: 100%;
         height: 90vh;
         position: absolute;
         top: 80px;
@@ -90,7 +90,7 @@
     .nav-links {
         text-align: center;
         padding: 2rem;
-        width: 50%;
+        width: 100%;
         display: table;
     }
 
