--- a/src/components/style/NavBar.css
+++ b/src/components/style/NavBar.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
+
 }
 
 .navbar-logo {
@@ -35,7 +36,7 @@
 .nav-item {
     display: flex;
     align-items: center;
-    height: 80px;
+    height: 50px;
 }
 
 .nav-links {
@@ -70,8 +71,10 @@
     .nav-menu {
         display: flex;
         flex-direction: column;
-        width: 100%;
-        height: 90vh;
+        margin: 10px;
+        max-height: 150px;
+        width: 92%;
+        text-align: center;
         position: absolute;
         top: 80px;
         left: -100%;
